# LGL-MOD-MENU-3.2

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/android/support/: Menu.java
app/src/main/jni/: CMakeLists.txt
